regression/field/rod_sphere/log.txt
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
Depending main.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/geometries/rod_dielectric/rod_dielectric.cpp ...
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/mfis.cpp: In member function ‘virtual void mfis::define(const Box&, const RealVect&, const Real&, const Vector<GeometryService*>&, int, int, bool)’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/mfis.cpp:35:6: error: ‘computational_geometry’ has not been declared
   if(computational_geometry::s_use_new_gshop){
      ^~~~~~~~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/mfis.cpp:40:3: error: ‘memrep’ has not been declared
   memrep::get_max_min_memory();
   ^~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/mfis.cpp:49:8: error: ‘computational_geometry’ has not been declared
     if(computational_geometry::s_use_new_gshop){
        ^~~~~~~~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/mfis.cpp:54:5: error: ‘memrep’ has not been declared
     memrep::get_max_min_memory();
     ^~~~~~
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.rules:517: recipe for target 'o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/mfis.o' failed
make[1]: *** [o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/mfis.o] Error 1
make[1]: *** Waiting for unfinished jobs....
main.cpp:7:17: error: ‘physics’ has not been declared
 using namespace physics::poisson;
                 ^~~~~~~
main.cpp:7:26: error: ‘poisson’ is not a namespace-name
 using namespace physics::poisson;
                          ^~~~~~~
main.cpp:7:33: error: expected namespace-name before ‘;’ token
 using namespace physics::poisson;
                                 ^
main.cpp: In function ‘int main(int, char**)’:
main.cpp:20:17: error: ‘computational_geometry’ was not declared in this scope
   RefCountedPtr<computational_geometry> compgeom = RefCountedPtr<computational_geometry> (new rod_dielectric());
                 ^~~~~~~~~~~~~~~~~~~~~~
main.cpp:20:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:13:0,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/computational_geometry.H:37:9: note:   ‘ChomboDischarge::computational_geometry’
   class computational_geometry {
         ^~~~~~~~~~~~~~~~~~~~~~
main.cpp:20:39: error: template argument 1 is invalid
   RefCountedPtr<computational_geometry> compgeom = RefCountedPtr<computational_geometry> (new rod_dielectric());
                                       ^
main.cpp:20:88: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<computational_geometry> compgeom = RefCountedPtr<computational_geometry> (new rod_dielectric());
                                                                                        ^
main.cpp:20:88: note:   expected a type, got ‘computational_geometry’
main.cpp:20:95: error: expected type-specifier before ‘rod_dielectric’
   RefCountedPtr<computational_geometry> compgeom = RefCountedPtr<computational_geometry> (new rod_dielectric());
                                                                                               ^~~~~~~~~~~~~~
main.cpp:21:17: error: ‘amr_mesh’ was not declared in this scope
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                 ^~~~~~~~
main.cpp:21:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
main.cpp:21:25: error: template argument 1 is invalid
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                         ^
main.cpp:21:74: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                                                                          ^
main.cpp:21:74: note:   expected a type, got ‘amr_mesh’
main.cpp:21:81: error: expected type-specifier before ‘amr_mesh’
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                                                                                 ^~~~~~~~
main.cpp:22:17: error: ‘geo_coarsener’ was not declared in this scope
   RefCountedPtr<geo_coarsener> geocoarsen        = RefCountedPtr<geo_coarsener> (new geo_coarsener());
                 ^~~~~~~~~~~~~
main.cpp:22:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:18:0,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/geometry/geo_coarsener.H:22:9: note:   ‘ChomboDischarge::geo_coarsener’
   class geo_coarsener {
         ^~~~~~~~~~~~~
main.cpp:22:30: error: template argument 1 is invalid
   RefCountedPtr<geo_coarsener> geocoarsen        = RefCountedPtr<geo_coarsener> (new geo_coarsener());
                              ^
main.cpp:22:79: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<geo_coarsener> geocoarsen        = RefCountedPtr<geo_coarsener> (new geo_coarsener());
                                                                               ^
main.cpp:22:79: note:   expected a type, got ‘geo_coarsener’
main.cpp:22:86: error: expected type-specifier before ‘geo_coarsener’
   RefCountedPtr<geo_coarsener> geocoarsen        = RefCountedPtr<geo_coarsener> (new geo_coarsener());
                                                                                      ^~~~~~~~~~~~~
main.cpp:23:17: error: ‘cell_tagger’ was not declared in this scope
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                 ^~~~~~~~~~~
main.cpp:23:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:16:0,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/cell_tagger/cell_tagger.H:23:9: note:   ‘ChomboDischarge::cell_tagger’
   class cell_tagger {
         ^~~~~~~~~~~
main.cpp:23:28: error: template argument 1 is invalid
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                            ^
main.cpp:23:77: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                                                                             ^
main.cpp:23:77: note:   expected a type, got ‘cell_tagger’
main.cpp:26:36: error: ‘field_stepper’ was not declared in this scope
   auto timestepper = RefCountedPtr<field_stepper<field_solver_multigrid> >
                                    ^~~~~~~~~~~~~
main.cpp:26:36: note: suggested alternative:
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:23:13: note:   ‘ChomboDischarge::physics::poisson::field_stepper’
       class field_stepper : public time_stepper{
             ^~~~~~~~~~~~~
main.cpp:26:50: error: ‘field_solver_multigrid’ was not declared in this scope
   auto timestepper = RefCountedPtr<field_stepper<field_solver_multigrid> >
                                                  ^~~~~~~~~~~~~~~~~~~~~~
main.cpp:26:50: note: suggested alternative:
In file included from main.cpp:2:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:29:9: note:   ‘ChomboDischarge::field_solver_multigrid’
   class field_solver_multigrid : public field_solver {
         ^~~~~~~~~~~~~~~~~~~~~~
main.cpp:26:72: error: template argument 1 is invalid
   auto timestepper = RefCountedPtr<field_stepper<field_solver_multigrid> >
                                                                        ^
main.cpp:27:11: error: ‘field_stepper’ does not name a type; did you mean ‘timestepper’?
      (new field_stepper<field_solver_multigrid>());
           ^~~~~~~~~~~~~
           timestepper
main.cpp:27:49: error: expected primary-expression before ‘)’ token
      (new field_stepper<field_solver_multigrid>());
                                                 ^
main.cpp:30:17: error: ‘driver’ was not declared in this scope
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                 ^~~~~~
main.cpp:30:17: note: suggested alternative:
In file included from main.cpp:1:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:29:9: note:   ‘ChomboDischarge::driver’
   class driver {
         ^~~~~~
main.cpp:30:23: error: template argument 1 is invalid
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                       ^
main.cpp:30:54: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                                                      ^
main.cpp:30:54: note:   expected a type, got ‘driver’
main.cpp:30:61: error: expected type-specifier before ‘driver’
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                                                             ^~~~~~
main.cpp:31:9: error: base operand of ‘->’ is not a pointer
   engine->setup_and_run(input_file);
         ^~
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.rules:517: recipe for target 'o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/main.o' failed
make[1]: *** [o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/main.o] Error 1
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.rules:425: recipe for target 'main' failed
make: *** [main] Error 2
